# kernel-matmul-benchmark

./: .devcontainer  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  benchmark.sbatch  env.sh  pyproject.toml
kernel_matmul_experiments/approximation_error/: cli.py
kernel_matmul_experiments/benchmark/: cli.py  implementations.py  plot.py  store.py  util.py
kernel_matmul_experiments/comparison/: cli.py  dataset_helper.py  hpo.py  model.py  spectral.py
kernel_matmul_experiments/cutoff/: cli.py
kernel_matmul_experiments/downsample/: cli.py  dataset_helper.py  hpo.py  model.py
rebuttal/: .gitignore  naive.py  naive.sbatch  naive_analysis.ipynb  naive_traffic_hourly.pt  trial_count.ipynb  vs_keops.py  vs_keops_analysis.py
sbatchx/: comparison.sbatchx  naive.sbatchx  vs_keops.sbatchx
