[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kernel-matmul-experiments"
version = "0.1.0"
description = ""
authors = ["Tilman Hoffbauer <tilman.hoffbauer@rwth-aachen.de>"]

[tool.poetry.dependencies]
python = "^3.11,<3.12"
kernel-matmul = { path = "kernel-matmul", develop = true }

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
tqdm = "^4.66.1"
plotly = "^5.18.0"
pandas = "^2.1.3"

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]
